# JVM

./: AGENTS.md  CMakeLists.txt  README.md  main.cpp
Stream/: ClassRead.cpp
classFile/: BootClassLoader.cpp  ClassFileParser.cpp
inteoreter/: BytecodeStream.cpp  CodeRunBase.cpp  CodeRunBase.h
native/: JavaNativeInterface.cpp
oop/: CodeAttributeInfo.h  ConstantPool.cpp  InstanceKlass.h  MethodInfo.h
runtime/: JavaThread.h  JavaVFrame.h  Threads.cpp  Threads.h
